log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
  #namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-file
          emptyDir: {}
#        - name: shared-pong
#          persistentVolumeClaim:
#            claimName: volume-claim
        - name: information
          configMap:
            name: example-configmap
      containers:
        - name: getlogoutput
          image: misetius/getlog:5.3 #project/image
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 120
            httpGet:
              path: /
              port: 3005

          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files 
#          - name: shared-pong
#            mountPath: /usr/src/app/pongs
          - name: information
            mountPath: /usr/src/app/information
        - name: loggenerator
          image: misetius/generatelog:69ec18c9f3f98c7fdc2010c39a975bf7f901e125 #project2/image2
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files 


#https://raw.githubusercontent.com/misetius/kubernetesSubmissions/main/log_output/manifests/deployment.yaml
