log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  #namespace: exercises
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3005
