log_output/manifests/deployment_and_service_greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      name: greeter
      labels:
        app: greeter
    spec:
      containers:
        - name: greeter
          image: misetius/greeter
          imagePullPolicy: Always
        - name: greeter2
          image: misetius/greeter
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc1
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3055
      protocol: TCP
      targetPort: 3023

---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc2
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3056
      protocol: TCP
      targetPort: 3024


---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 8888
    protocol: HTTP

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
  - name: httpbin-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: greeter-svc1
      port: 3055
      weight: 75
    - name: greeter-svc2
      port: 3056
      weight: 25
